--- a/ui/_includes/layouts/base.html
+++ b/ui/_includes/layouts/base.html
@@ -1,37 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        {# CS-TODO: Update the _data/client.json file to automatically generate the correct <head> tags for you #}
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/assets/css/root.css">
+    <link rel="stylesheet" href="/assets/css/dark.css">
+    <script src="/assets/js/dark.js" defer></script>
+    <script src="/assets/js/nav.js" defer></script>
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-        <meta name="description" content="{{ description }}">
-        {# CS-TODO: Change the OG Tags (image, in particular) to something appropriate for your client #}
-        <meta property="og:title" content="{{ title }}">
-        <meta property="og:description" content="{{ description }}">
-        <meta property="og:url" content="{{ client.domain }}{{ page.url }}">
-        <meta property="og:type" content="website">
-        <meta property="og:site_name" content="{{ client.name }}">
-        <meta property="og:locale" content="en_US">
-        <meta property="og:image" content="https://codestitch.app/frontend/images/logo.png">
-        <meta property="og:image:width" content="1421">
-        <meta property="og:image:height" content="180">
-        <link rel="canonical" href="{{ client.domain }}{{ page.url }}">
+    {% block head %}
+    {% endblock %}
 
-        <link rel="stylesheet" href="/assets/css/root.css">
-        <link rel="stylesheet" href="/assets/css/dark.css">
-        <script src="/assets/js/dark.js" defer></script>
-        <script src="/assets/js/nav.js" defer></script>
-
-        {% block head %}{% endblock %}
-
-        <title>{{ title }}</title>
-    </head>
-    <body>
-        {% include "components/header.html" %}
-        <main id="main">
-            {% block body %}{% endblock %}
-        </main>
-        {% include "components/footer.html" %}
-    </body>
+    <title>{{ title }}</title>
+  </head>
+  <body>
+    <main id="main">
+      {% block body %}
+      {% endblock %}
+    </main>
+  </body>
 </html>
