--- a/ui/_includes/layouts/base.html
+++ b/ui/_includes/layouts/base.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/assets/css/root.css">
-    <link rel="stylesheet" href="/assets/css/dark.css">
-    <script src="/assets/js/dark.js" defer></script>
     <script src="/assets/js/nav.js" defer></script>
 
     {% block head %}
@@ -14,8 +12,7 @@
   </head>
   <body>
     <main id="main">
-      {% block body %}
-      {% endblock %}
+      {{ content | safe }}
     </main>
   </body>
 </html>
